--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "homepage": "/static/react",
   "dependencies": {
     "@babel/core": "7.9.0",
+    "@bit/formidablelabs.react-animations.fade-out": "^1.0.0",
+    "@bit/formidablelabs.react-animations.types": "^1.0.0",
+    "@bit/formidablelabs.react-animations.utils": "^1.0.0",
+    "@bit/formidablelabs.react-animations.zoom-in-down": "^1.0.0",
+    "@bit/formidablelabs.react-animations.zoom-in-up": "^1.0.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -37,8 +42,10 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "mapbox-gl": "^1.13.0",
     "materialize-css": "^1.0.0-rc.2",
     "mini-css-extract-plugin": "0.9.0",
+    "npm-watch": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -55,6 +62,7 @@
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
+    "styled-components": "^5.2.1",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
@@ -67,7 +75,16 @@
     "start": "node scripts/start.js",
     "start-api": "cd api && venv/bin/flask run --no-debugger",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "watch": "npm-watch"
+  },
+  "watch": {
+    "build": {
+      "patterns": [
+        "src"
+      ],
+      "extensions": "js,jsx"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
